1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefObject.[hm], defobj.h ([Object_s -lispOutVars:deep:]):
	New method.

	* DefObject.m ([Object_s -_lispOut_:deep:]): Use it.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m: Include directory.h instead of jni.h.

	* FArguments.m: Include directory.h instead of jni.h with jniEnv
	extern declaration.

	* DefObject.m: Don't include jni.h.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefObject.h (Object_s): Adopt GetName.

	* DefObject.[hm] ([Object_s -getName]): New method, remove factory 
	method of same.

	* defobj.h (GetName): Add instance -getName, remove +getName:.

	* FCall.m ([FCall_c -performCall]): Put libffi return type in
	a types_t and recover it per the case (libffi bug workarounds for
	char, short, and pointers).

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m ([HDF5CompoundType_c -packObj:to:],
	[HDF5CompoundType_c -writeLevel:]): Use PTRINT for offset (cast to id).

	* FCall.m: Include avcall.h.
	
	* Zone.m ([Zone_c -describe:]): Cast all counts to unsigned long
	and use %lu specifier.
	([Zone_c createEnd]): New variable indexOffset (avoids compiler
	warning on Irix).

	* Zone.h: Use size_t instead of unsigned for return of getPageSize.
	(Zone_c): Use size_t for all counts.

	* FCall.m (ffi_types, avcall_add_primitive): Protect per
	USE_AVCALL.
	(avcall_add_primitive): Protect per HAVE_JDK.

	* HDF5Object.m: Don't include limits.h.

1999-04-26  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* FCall.m (ffi_types): Use float for float, not double.
	([FCall_c -performCall]): Don't convert back from float to double.

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.m, FCall.m: Moved ffi_types to FCall.

	* FCall.m: Don't declare fillHiddenArguments.
	(FUNCPTR): Use local macro instead of FFI_FN.
	(fillHiddenArguments): Add support for avcall.
	(avcall_add_primitive): New function.